# programming_examples

./: README.md
3rd_libs_demo/ffmpeg/AVFrame_operations/: CMakeLists.txt  Config.cmake  README.md  display_yuv.c  fill_frame.c  pix_fmt_dsc.c
3rd_libs_demo/ffmpeg/transcode/: CMakeLists.txt  Config.cmake
3rd_libs_demo/openssl/: README.md  mem_ssl.cpp
OpenCV/: CMakeLists.txt  Config.cmake
OpenCV/DigitalWaterMark/SeamlessCloning/: clone.py  laplacian_pyramid_blending.py
OpenCV/Histogram/: CMakeLists.txt  one_dims_hist.cpp
OpenCV/ImagesComparison/: README.md  images_comparison00.py  images_comparison01.py
OpenCV/OpenMP/: CMakeLists.txt  README.md  openmp_test.cpp
OpenCV/OpencvDnn/: dnn_darknet.py
OpenCV/contours/: CMakeLists.txt  README.md  connectedComponentsWithStats_demo.cpp  findContours_demo.cpp
OpenCV/kmeans/: CMakeLists.txt
OpenCV/tools/: CMakeLists.txt  phone_adjustment.cpp
PyQt5/: res.py  res.qrc  tablewidget.py
PyQt5/res/qss/: table_widget.qss
PyQt5/事件处理/: event_drag.py
Qt5/QGraphics/: graphics_view.py
Qt5/computer_vision/: compute_vision.pro
Qt5/computer_vision/color_plugin/: color_plugin.pro
Qt5/computer_vision/copymakeborder_plugin/: copymakeborder_plugin.pro
Qt5/computer_vision/filter_plugin/: filter_plugin.pro
Qt5/computer_vision/fourier_plugin/: fourier_plugin.cpp  fourier_plugin.pro
Qt5/computer_vision/keypoint_plugin/: keypoint_plugin.cpp  keypoint_plugin.pro
Qt5/computer_vision/mainapp/: main.cpp  mainapp.pro  mainwindow.cpp  qenhancedgraphicsview.cpp
Qt5/computer_vision/segmentation_plugin/: segmentation_plugin.cpp  segmentation_plugin.pro
Qt5/computer_vision/template_plugin/: template_plugin.pro
Qt5/computer_vision/transform_plugin/: transform_plugin.cpp  transform_plugin.pro
Qt5/仪表/表盘/: Dial.cpp  Dial.h  biaopan.pro  form.cpp  form.h  form.ui  main.cpp  res.qrc
boost_python/: README.md
boost_python/demo01/: Makefile  test.py  zoo.cpp
boost_python/demo02/: Makefile  test.py  zoo.cpp
cmake/: README.md
cmake/t01/: CMakeLists.txt
cmake/t04/: CMakeLists.txt
cmake/t04/lib_hello/: CMakeLists.txt
cmake/t04/src/: CMakeLists.txt
cmake/t1/: CMakeLists.txt
cmake/t7/: CMakeLists.txt  config.h.in  main.cc
cmake/t8/: CMakeLists.txt
demo/base/: fork_exec.cpp  ifaddrs.cpp  std_function.cpp
demo/net/: README-raw_socket.md  raw_socket_bpf.cpp
handy/: CMakeLists.txt  README.md
handy/executable/: CMakeLists.txt  mat_operation_ex.cpp  mat_put_chinese_txt_ex.cpp  parameter_ex.cpp
handy/include/cvUtils/: MatOperation.h  OpencvText.h
handy/include/parameterHandler/: ParameterHandler.h  parameterReader.h
handy/res/: parameters.ini
handy/src/: CMakeLists.txt
handy/src/cvUtils/: MatOperation.cpp  OpencvText.cpp
handy/src/misc/: FindFiles.cpp  FindFiles.h  console.cpp  编解码.cpp
handy/src/parameterHandler/: ParameterHandler.cpp  parameterReader.cpp
python/: decode_scel.py  novel_crawler.py
python/network/: multicast_ssdp_client.py  multicast_ssdp_server.py  multicast_ws_client.py  udp_group_multicast_client.py  udp_group_multicast_server.py
script/shell/: sqlite3_repair.sh  upgrade_openssh_centos7.sh  upgrade_python.sh
script/shell/components/maven/: README.md  install_maven.sh
script/shell/components/mysql/: install_mysql.sh
script/shell/tools/: tar_process.sh
script/shell/vim_config/: .vimrc  README.md  clang_complete.vmb  vim_config_CentOS7.sh  vimrc  vimrc.plug.cn  vimrc.plug.github  vimrc.plug.settings
script/shell/vim_config/colors/: corporation.vim
script/shell/vim_config/plugged/vim-cmake/plugin/: cmake.vim
script/wireshark_plugins/: README.md  http_querystring_decoder.lua  rtp_amr_export.lua  rtp_g729_export.lua  rtp_h264_export.lua  rtp_h264_extractor_new.lua  rtp_h265.lua  rtp_h265_export.lua  rtp_pcma_export.lua  rtp_pcmu_export.lua  rtp_ps.lua  rtp_ps_export.lua  rtp_silk_export.lua
shell/: install_jar.sh  install_mysql.sh  jdk8_install.sh  tar_process.sh  upgrade_openssh_centos7.sh
shell/vim_config/: .vimrc  README.md  vim_config_CentOS7.sh
