AUX_SOURCE_DIRECTORY(. SRC_LIST)

# https://gitlab.kitware.com/cmake/community/wikis/doc/cmake/RPATH-handling
MESSAGE(STATUS "CMAKE_SKIP_RPATH        : " ${CMAKE_SKIP_RPATH})
MESSAGE(STATUS "CMAKE_SKIP_INSTALL_RPATH: " ${CMAKE_SKIP_INSTALL_RPATH})
MESSAGE(STATUS "CMAKE_SKIP_BUILD_RPATH  : " ${CMAKE_SKIP_BUILD_RPATH})


LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib) # 这行一定要在ADD_EXECUTABLE前面
ADD_EXECUTABLE(t04 ${SRC_LIST})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
# 默认在build是可执行程序添加RPATH信息，在INSTALL时去除，可以通过以下命令清楚
# SET_TARGET_PROPERTIES(t04 PROPERTIES SKIP_BUILD_RPATH TRUE)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib_hello)
TARGET_LINK_LIBRARIES(t04 hello) # 链接动态库
#TARGET_LINK_LIBRARIES(t4 libhello.a) # 链接静态库

INSTALL(TARGETS t04 RUNTIME DESTINATION bin)
